<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <TextView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/column_load_no" />
	
    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#19000000" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/column_load_date" />
	
    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#19000000" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/column_lease" />
	
    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#19000000" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/column_facility_id" />
	
    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#19000000" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/column_deliv_loc" />
	
    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#19000000" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/column_functions" />

</LinearLayout>
