<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:slidemenu="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/slide_left_width"
    android:layout_height="match_parent"
    slidemenu:layout_role="primaryMenu"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_size"
        android:gravity="center_vertical"
        android:orientation="horizontal"
    	android:background="@color/main_pink_color" >

        <ImageView
            android:id="@+id/img_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:contentDescription="@string/img_description"
            android:src="@drawable/ic_menu_list" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_sliding_menu_cell"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_description"
            android:src="@drawable/ic_menu_need" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_need"
            android:textStyle="bold"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/textsize_large" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_gray" />
    
    <LinearLayout
        android:id="@+id/layout_order"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_sliding_menu_cell"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_description"
            android:src="@drawable/ic_menu_order" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_order"
            android:textStyle="bold"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/textsize_large" />

    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_gray" />
    
    <LinearLayout
        android:id="@+id/layout_price_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_sliding_menu_cell"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_description"
            android:src="@drawable/ic_menu_price_list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_price_list"
            android:textStyle="bold"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/textsize_large" />
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_gray" />
    
    <LinearLayout
        android:id="@+id/layout_more"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_sliding_menu_cell"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_normal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_description"
            android:src="@drawable/ic_menu_more" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_more"
            android:textStyle="bold"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/textsize_large" />
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_gray" />

    <LinearLayout
        android:id="@+id/layout_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_size"
        android:gravity="center_vertical"
        android:orientation="horizontal"
    	android:background="@drawable/bg_bottom_bar" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:contentDescription="@string/img_description"
            android:src="@drawable/ic_menu_logout" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_logout"
            android:textStyle="bold"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/textsize_large" />
    </LinearLayout>

</LinearLayout>