<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#eeeeee" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">
        <TextView
            android:id="@+id/lbl_load_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey_color"
            android:textSize="13sp"
            android:text="@string/column_load_no_upper"/>
        <TextView
            android:id="@+id/lbl_driver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey_color"
            android:textSize="13sp"
            android:text="@string/column_driver_upper"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:id="@+id/txt_load_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/grey_color"
            android:textSize="13sp"
            android:gravity="center_vertical"
            android:background="@android:color/white"/>
        <TextView
            android:id="@+id/txt_driver"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/grey_color"
            android:textSize="13sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">
        <TextView
            android:id="@+id/lbl_lease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey_color"
            android:textSize="13sp"
            android:text="@string/column_lease_upper"/>
        <TextView
            android:id="@+id/lbl_facility_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey_color"
            android:textSize="13sp"
            android:text="@string/column_facility_id_upper"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:id="@+id/txt_lease"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/grey_color"
            android:textSize="13sp"
            android:gravity="center_vertical"
            android:background="@android:color/white"/>
        <TextView
            android:id="@+id/txt_facility_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/grey_color"
            android:textSize="13sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@android:color/white"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">
        <TextView
            android:id="@+id/lbl_deliv_loc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey_color"
            android:textSize="13sp"
            android:text="@string/column_deliv_loc_upper"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:id="@+id/txt_deliv_loc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/grey_color"
            android:textSize="13sp"
            android:gravity="center_vertical"
            android:background="@android:color/white"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/grey_color"
        android:textSize="13sp"
        android:text="@string/column_comments_upper"/>
    <TextView
        android:id="@+id/txt_comments"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:textColor="@color/grey_color"
        android:textSize="13sp"
        android:background="@android:color/white"/>
    
    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/btn_back" />
</LinearLayout>
</RelativeLayout>
