<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:id="@+id/header_view"
        android:layout_width="match_parent"
	    android:layout_height="@dimen/menu_size"
	    android:background="@color/main_pink_color"
	    android:orientation="horizontal">
	    
        <Button
            android:id="@+id/btn_back"
            android:layout_width="@dimen/menu_size"
            android:layout_height="@dimen/menu_size"
            android:background="@drawable/btn_back"/>
	    <TextView
	        android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="@drawable/topbar_divider"/>
	    <TextView
	        android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="44dp"
            android:gravity="center"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
	    android:layout_height="6dp"
	    android:layout_below="@id/header_view"
	    android:background="@drawable/topbar_shadow" />
    
    <RelativeLayout
        android:id="@+id/login_group"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/header_view"
	    android:paddingLeft="@dimen/margin_extra_large"
	    android:paddingTop="@dimen/margin_very_large"
	    android:paddingRight="@dimen/margin_extra_large"
	    android:paddingBottom="@dimen/margin_extra_large"
	    android:gravity="center">
	       
	    <EditText
	        android:id="@+id/txt_password"
	        android:layout_width="match_parent"
	    	android:layout_height="50dp"
	    	android:layout_marginBottom="@dimen/margin_extra_large"
	    	android:inputType="textPassword"
	    	android:hint="@string/password"
	    	android:textColor="@color/main_pink_color"
	        android:textSize="20sp"/>
	    <Button
	        android:id="@+id/btn_complete"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	    	android:layout_below="@id/txt_password"
	        android:background="@drawable/btn_outline_pink"
	        android:text="@string/complete"
	        android:textColor="@color/main_pink_color"
	        android:textSize="26sp"/>
	</RelativeLayout>
	
    <LinearLayout
        android:id="@+id/divider"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/login_group"
	    android:orientation="horizontal"
	    android:gravity="center" >
	    
        <ImageView
            android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:layout_margin="@dimen/margin_extra_large"
	    	android:src="@drawable/line_dash_pink"
	    	android:contentDescription="@string/img_description"/>
        <TextView
            android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/or"
	    	android:textColor="@color/main_pink_color"
	    	android:textSize="26sp" />
        <ImageView
            android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:layout_margin="@dimen/margin_extra_large"
	    	android:src="@drawable/line_dash_pink"
	    	android:contentDescription="@string/img_description"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/third_party_group"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
    	android:layout_marginLeft="@dimen/margin_extra_large"
    	android:layout_marginRight="@dimen/margin_extra_large"
	    android:layout_below="@id/divider"
	    android:orientation="horizontal"
	    android:gravity="center" >
	    
        <ImageView
            android:id="@+id/btn_wechat"
            android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:layout_margin="@dimen/margin_large"
	    	android:src="@drawable/ic_wechat"
	    	android:contentDescription="@string/img_description"/>
        <ImageView
            android:id="@+id/btn_weibo"
            android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:layout_margin="@dimen/margin_large"
	    	android:src="@drawable/ic_weibo"
	    	android:contentDescription="@string/img_description"/>
        <ImageView
            android:id="@+id/btn_qq"
            android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:layout_margin="@dimen/margin_large"
	    	android:src="@drawable/ic_qq"
	    	android:contentDescription="@string/img_description"/>
    </LinearLayout>

</RelativeLayout>
